# codebase-dumper

./: .dumperrc  .gitignore  Cargo.toml  README.md
.github/scripts/: local-build.sh
.github/workflows/: release.yml
src/: main.rs
