[package]
name = "source-dumper"
version = "0.1.0"
edition = "2021"
description = "Aggregate source files into chunks for LLM context"
license = "MIT"
keywords = ["cli", "source", "dumper", "llm", "context"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.18.3"
once_cell = "1.19"
regex = "1.10"
walkdir = "2.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.10"