[package]
name = "source-dumper"
version = "0.3.0"
edition = "2021"
description = "Aggregate source files into chunks for LLM context"
license = "MIT"
keywords = ["cli", "source", "dumper", "llm", "context"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.18.3"
once_cell = "1.21"
regex = "1.12.2"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true